Arreglando errores para desplegar basados en los conceptos de NextJs.com

--- a/package.json
+++ b/package.json
@@ -2,12 +2,13 @@
   "name": "my-dashboard",
   "version": "0.1.0",
   "private": true,
-  "scripts": {
-    "dev": "next dev --turbopack",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
+"scripts": {
+  "dev": "next dev --turbopack",
+  "build": "next build",
+  "start": "next start",
+  "clean": "rimraf .next && rimraf node_modules/.cache",
+  "lint": "next lint"
+},
   "dependencies": {
     "@material-tailwind/react": "^2.1.10",
     "next": "15.3.1",
@@ -23,6 +24,7 @@
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "15.3.1",
+    "rimraf": "^6.0.1",
     "tailwindcss": "^4",
     "typescript": "^5"
   }
